RESOLVED FIXED189953
[iOS] Fix the open source iOS 12 build after r236445
https://bugs.webkit.org/show_bug.cgi?id=189953
Summary [iOS] Fix the open source iOS 12 build after r236445
Wenson Hsieh
Reported 2018-09-25 10:29:03 PDT
r236445 introduced duplicate WebCore::UIKitLibrary symbols in WebCore, due to multiple declarations of SOFT_LINK_FRAMEWORK_FOR_SOURCE(WebCore, UIKit).
Attachments
Patch (16.06 KB, patch)
2018-09-25 10:55 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-09-25 10:55:13 PDT
WebKit Commit Bot
Comment 2 2018-09-25 11:59:46 PDT
Comment on attachment 350762 [details] Patch Clearing flags on attachment: 350762 Committed r236468: <https://trac.webkit.org/changeset/236468>
WebKit Commit Bot
Comment 3 2018-09-25 11:59:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.